--- a/02_metro/index.html
+++ b/02_metro/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CesiumJS 맛보기</title>
+    <title>CesiumJS Metro</title>
   </head>
   <body>
     <div id="cesiumContainer"></div>
